--- a/heckman.bib
+++ b/heckman.bib
@@ -1,17 +1,6 @@
 % This file was created with JabRef 2.10.
 % Encoding: Cp1252
 
-@article{galil1986efficient,
-  title={Efficient algorithms for finding maximum matching in graphs},
-  author={Galil, Zvi},
-  journal={ACM Computing Surveys (CSUR)},
-  volume={18},
-  number={1},
-  pages={23--38},
-  year={1986},
-  publisher={ACM}
-}
-
 
 @TechReport{dHaultfoeuille_CompCondition,
   Title                    = {On the Completeness Condition in Nonparametric Instrumental Problems},
@@ -22874,6 +22863,19 @@ Welfare Reform Academy},
   Timestamp                = {2015.09.08}
 }
 
+@Article{Derigs_1988_Solving_AOR,
+  Title                    = {Solving Non-Bipartite Matching Problems Via Shortest Path Techniques},
+  Author                   = {Derigs, Ulrich},
+  Journal                  = {Annals of Operations Research},
+  Year                     = {1988},
+  Number                   = {1},
+  Pages                    = {225--61},
+  Volume                   = {13},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.05.15}
+}
+
 @Article{Derman-Sparks_2016_J-of-Pedagogy,
   Title                    = {What {I} Learned from the {Ypsilanti Perry Preschool Project}: A Teacher's Reflections},
   Author                   = {Derman-Sparks, Louise},
@@ -31149,6 +31151,19 @@ Welfare Reform Academy},
   Volume                   = {159},
 
   Publisher                = {Springer}
+}
+
+@Article{Galil-1986-CSUR,
+  Title                    = {Efficient Algorithms for Finding Maximum Matching in Graphs},
+  Author                   = {Galil, Zvi},
+  Journal                  = {ACM Computing Surveys (CSUR)},
+  Year                     = {1986},
+  Number                   = {1},
+  Pages                    = {23-38},
+  Volume                   = {18},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2018.05.15}
 }
 
 @TechReport{Galinsky2006,
